[package]
name = "beb"
version = "0.0.1"
edition = "2021"
homepage = "https://beb.xyz"
description = "More SDK information incoming..."
license = "ISC"
documentation = "https://docs.beb.xyz"
readme = "README.md"
repository = "https://github.com/bebdotxyz/beb-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
